Feature(Layout): Add IntroJS example page

--- a/demo/plugin_introjs.html
+++ b/demo/plugin_introjs.html
@@ -9,7 +9,8 @@
 <meta name="author" content="eMAG HX Team">
 
 <link rel="apple-touch-icon" href="../apple-touch-icon.png">
-<link rel="icon" type="image/png" href="../favicon.png">    <!-- PLUGIN: PRISM: This plugin helps display demo code. Don't add it everywhere -->
+<link rel="icon" type="image/png" href="../favicon.png">    <link rel="stylesheet" href="../dist/plugins/intro/intro.min.css">
+    <!-- PLUGIN: PRISM: This plugin helps display demo code. Don't add it everywhere -->
 <link rel="stylesheet" href="../dist/plugins/prism/prism.min.css">
 
 <!-- PHOTON main styles -->
@@ -451,6 +452,62 @@
                     <div class="show-panel">
                         <div class="show-panel-body">
                             <h4 class="text-primary"><strong>IntroJS</strong></h4>
+
+                            <h2>Choose the tour type</h2>
+
+                            <button id="introJsDefault" type="button" class="btn btn-primary">Default</button>&nbsp;
+                            <button id="introJsWithoutBullets" type="button" class="btn btn-primary">Without bullets</button>&nbsp;
+                            <button id="introJsWithoutButtons" type="button" class="btn btn-primary">Without buttons</button>&nbsp;
+                            <button id="introJsWithProgressBar" type="button" class="btn btn-primary">With progress bar</button>&nbsp;
+                            <button id="introJsWithAutoPositioning" type="button" class="btn btn-primary">Auto Positioning</button>&nbsp;
+                            <button id="introJsHtmlInTooltip" type="button" class="btn btn-primary">HTML in tooltip</button>&nbsp;
+                            <button id="introJsHints" type="button" class="btn btn-primary">Hints</button>&nbsp;
+
+                            <hr>
+
+                            <div class="row">
+                                <div id="section1" class="col-sm-4">
+                                    <h3>Section 1</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+                                </div>
+                                <div id="section5" class="col-sm-4">
+                                    <h3>Section 5</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div id="section2" class="col-sm-4">
+                                    <h3>Section 2</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+                                </div>
+                                <div id="section6" class="col-sm-4">
+                                    <h3>Section 6</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div id="section3" class="col-sm-4">
+                                    <h3>Section 3</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+                                </div>
+                                <div id="section7" class="col-sm-4">
+                                    <h3>Section 7</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div id="section4" class="col-sm-4">
+                                    <h3>Section 4</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+                                </div>
+                                <div id="section8" class="col-sm-4">
+                                    <h3>Section 8</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis augue a neque cursus ac blandit orci faucibus. Phasellus nec metus purus.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -473,6 +530,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>window.jQuery || document.write("<script src=\"../dist/js/lib/jquery-1.11.3.min.js\">"+"<"+"/script>")</script>
 
+<script src="../dist/plugins/intro/intro.min.js"></script>
 
 <script src="../dist/js/main_script.min.js"></script>
 <script src="../dist/js/demo_helpers.js"></script>
@@ -485,7 +543,182 @@
 
         demoHelpers();  // Require demo_helpers.js
 
+        function initStepData() {
+            window.defaultsIntroSteps = [
+                {
+                    element: '#section1',
+                    intro: 'This is a step positioned left.',
+                    position: 'left'
+                },
+                {
+                    element: '#section2',
+                    intro: 'This is a step positioned right.',
+                    position: 'right'
+                },
+                {
+                    element: '#section3',
+                    intro: 'This is a step positioned top.',
+                    position: 'top'
+                },
+                {
+                    element: '#section4',
+                    intro: 'This is a step positioned bottom.',
+                    position: 'bottom'
+                },
+                {
+                    element: '#section5',
+                    intro: 'This is a step without position set.'
+                },
+                {
+                    intro: 'This is a step which is not attached to any element.'
+                }
+            ];
 
+            window.autoPositioningIntroSteps = [
+                {
+                    element: '#section1',
+                    intro: 'This is a step with a big description that should be displayed as positioned left, but there is not enough space in left.',
+                    position: 'left'
+                },
+                {
+                    element: '#section2',
+                    intro: 'Positioned left too.',
+                    position: 'left'
+                },
+                {
+                    element: '#section7',
+                    intro: 'Positioned left too.',
+                    position: 'left'
+                }
+            ];
+
+            window.introStepsWithHtml = [
+                {
+                    element: '#section1',
+                    intro: 'In this step we use the <b>bold text HTML</b> tag.'
+
+                },
+                {
+                    element: '#section2',
+                    intro: 'In this step we use the <i>italic text HTML</i> tag.'
+                },
+                {
+                    element: '#section8',
+                    intro: 'As <b>you</b> <u>already</u> <i>seen</i> <sub>you</sub> <sup>can</sup> use any HTML tag you want inside a step. <i class="fa fa-smile-o" aria-hidden="true"></i>'
+                }
+            ];
+
+            window.introHints = [
+                {
+                    element: '#section1',
+                    hint: 'This is a hint with position left.',
+                    position: 'left'
+                },
+                {
+                    element: '#section2',
+                    hint: 'This is a hint with position right.',
+                    position: 'right'
+                },
+                {
+                    element: '#section3',
+                    hint: 'This is a hint with position top.',
+                    position: 'top'
+                },
+                {
+                    element: '#section4',
+                    hint: 'This is a hint with hintPosition top-left.',
+                    hintPosition: 'top-left'
+                },
+                {
+                    element: '#section5',
+                    hint: 'This is a hint with hintPosition top-middle and position left.',
+                    hintPosition: 'top-middle',
+                    position: 'left'
+                },
+                {
+                    element: '#section6',
+                    hint: 'This is a hint with hintPosition top-right and position right.',
+                    hintPosition: 'top-right',
+                    position: 'right'
+                },
+                {
+                    element: '#section7',
+                    hint: 'This is a hint with hintPosition bottom-right and position right.',
+                    hintPosition: 'bottom-right',
+                    position: 'right'
+                },
+                {
+                    element: '#section8',
+                    hint: 'This is a hint without any position set.'
+                }
+            ];
+        }
+
+        function setIntroJsOptions(options) {
+            var intro = introJs();
+            intro.setOptions(options);
+            return intro;
+        }
+
+        function startIntroJs(options) {
+            setIntroJsOptions(options).start();
+        }
+
+        function addHintsForIntroJs(options) {
+            setIntroJsOptions(options).addHints();
+        }
+
+        $(document).ready(function () {
+            var $body = $('body');
+
+            initStepData();
+
+            $body.on('click', '#introJsDefault', function () {
+                startIntroJs({
+                    steps: window.defaultsIntroSteps
+                });
+            });
+
+            $body.on('click', '#introJsWithoutBullets', function () {
+                startIntroJs({
+                    showBullets: false,
+                    steps: window.defaultsIntroSteps
+                });
+            });
+
+            $body.on('click', '#introJsWithoutButtons', function () {
+                startIntroJs({
+                    showButtons: false,
+                    steps: window.defaultsIntroSteps
+                });
+            });
+
+            $body.on('click', '#introJsWithProgressBar', function () {
+                startIntroJs({
+                    showProgress: true,
+                    steps: window.defaultsIntroSteps
+                });
+            });
+
+            $body.on('click', '#introJsWithAutoPositioning', function () {
+                startIntroJs({
+                    tooltipPosition: 'auto',
+                    steps: window.autoPositioningIntroSteps
+                });
+            });
+
+            $body.on('click', '#introJsHtmlInTooltip', function () {
+                startIntroJs({
+                    steps: window.introStepsWithHtml
+                })
+            });
+
+            $body.on('click', '#introJsHints', function () {
+                addHintsForIntroJs({
+                    hints: window.introHints
+                });
+            });
+        });
     });
 </script>
 <!-- DOCUMENT-READY:End -->
